tests/functions/valid/forward_decl_args.su
s32 foo(s32 a);

s32 main(){
    return foo(3);
}

s32 foo(s32 a){
    return a + 1;
}