tests/functions/invalid/too_many_args.su
s32 foo(s32 a) {
    return a + 1;
}

s32 main() {
    return foo(1, 2);
}